--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.10",
+    "@react-native-community/slider": "^3.0.0",
     "@use-expo/font": "^2.0.0",
     "expo": "~37.0.3",
     "expo-secure-store": "^8.1.0",
@@ -28,8 +29,10 @@
     "react-native-unimodules": "~0.9.0",
     "react-native-web": "~0.11.7",
     "react-navigation": "^4.3.9",
+    "react-navigation-fluid-transitions": "^0.3.2",
     "react-navigation-stack": "^2.5.0",
-    "react-navigation-tabs": "^2.8.13"
+    "react-navigation-tabs": "^2.8.13",
+    "react-navigation-transitions": "^1.0.12"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
