--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-native": "~0.61.5",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-paper": "^3.10.1",
+    "react-native-picker-select": "^7.0.0",
     "react-native-raw-bottom-sheet": "^2.2.0",
     "react-native-reanimated": "^1.8.0",
     "react-native-safe-area-context": "^1.0.0",
