--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "^2.5.0",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-native-community/slider": "^3.0.0",
     "@use-expo/font": "^2.0.0",
+    "axios": "^0.19.2",
     "expo": "~37.0.3",
     "expo-secure-store": "^8.1.0",
     "expo-splash-screen": "^0.2.3",
