--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@use-expo/font": "^2.0.0",
     "axios": "^0.19.2",
     "expo": "~37.0.3",
+    "expo-document-picker": "^8.2.1",
     "expo-secure-store": "^8.1.0",
     "expo-splash-screen": "^0.2.3",
     "expo-updates": "~0.2.0",
