--- a/package.json
+++ b/package.json
@@ -13,20 +13,22 @@
     "@react-native-community/slider": "^3.0.0",
     "@use-expo/font": "^2.0.0",
     "axios": "^0.19.2",
-    "expo": "~37.0.3",
+    "expo": "^38.0.8",
     "expo-document-picker": "^8.2.1",
+    "expo-font": "~8.0.0",
+    "expo-linking": "^1.0.3",
     "expo-secure-store": "^8.1.0",
     "expo-splash-screen": "^0.2.3",
     "expo-updates": "~0.2.0",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
-    "react-native": "~0.61.5",
+    "react-native": "~0.62.0",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-paper": "^3.10.1",
     "react-native-picker-select": "^7.0.0",
     "react-native-raw-bottom-sheet": "^2.2.0",
     "react-native-reanimated": "^1.8.0",
-    "react-native-safe-area-context": "^1.0.0",
+    "react-native-safe-area-context": "~3.0.7",
     "react-native-screens": "^2.7.0",
     "react-native-snap-carousel": "^3.9.0",
     "react-native-tab-view": "^2.14.0",
