--- a/package.json
+++ b/package.json
@@ -8,31 +8,31 @@
     "test": "jest"
   },
   "dependencies": {
-    "@react-native-community/datetimepicker": "^2.5.0",
-    "@react-native-community/masked-view": "^0.1.10",
-    "@react-native-community/slider": "^3.0.0",
+    "@react-native-community/datetimepicker": "2.4.0",
+    "@react-native-community/masked-view": "0.1.10",
+    "@react-native-community/slider": "3.0.0",
     "@use-expo/font": "^2.0.0",
     "axios": "^0.19.2",
-    "expo": "^38.0.8",
-    "expo-document-picker": "^8.2.1",
-    "expo-font": "~8.0.0",
+    "expo": "^38.0.0",
+    "expo-document-picker": "~8.2.1",
+    "expo-font": "~8.2.1",
     "expo-linking": "^1.0.3",
-    "expo-secure-store": "^8.1.0",
-    "expo-splash-screen": "^0.2.3",
-    "expo-updates": "~0.2.0",
-    "react": "~16.9.0",
-    "react-dom": "~16.9.0",
-    "react-native": "~0.62.0",
-    "react-native-gesture-handler": "^1.6.1",
+    "expo-secure-store": "~9.0.1",
+    "expo-splash-screen": "^0.3.1",
+    "expo-updates": "~0.2.8",
+    "react": "16.11.0",
+    "react-dom": "16.11.0",
+    "react-native": "0.62.2",
+    "react-native-gesture-handler": "~1.6.0",
     "react-native-paper": "^3.10.1",
     "react-native-picker-select": "^7.0.0",
     "react-native-raw-bottom-sheet": "^2.2.0",
-    "react-native-reanimated": "^1.8.0",
+    "react-native-reanimated": "~1.9.0",
     "react-native-safe-area-context": "~3.0.7",
-    "react-native-screens": "^2.7.0",
+    "react-native-screens": "~2.9.0",
     "react-native-snap-carousel": "^3.9.0",
     "react-native-tab-view": "^2.14.0",
-    "react-native-unimodules": "~0.9.0",
+    "react-native-unimodules": "~0.10.1",
     "react-native-web": "~0.11.7",
     "react-navigation": "^4.3.9",
     "react-navigation-fluid-transitions": "^0.3.2",
