--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native-picker-select": "^7.0.0",
     "react-native-raw-bottom-sheet": "^2.2.0",
     "react-native-reanimated": "~1.9.0",
+    "react-native-root-toast": "^3.2.1",
     "react-native-safe-area-context": "~3.0.7",
     "react-native-screens": "~2.9.0",
     "react-native-snap-carousel": "^3.9.0",
