--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "react-navigation-fluid-transitions": "^0.3.2",
     "react-navigation-stack": "^2.5.0",
     "react-navigation-tabs": "^2.8.13",
-    "react-navigation-transitions": "^1.0.12"
+    "react-navigation-transitions": "^1.0.12",
+    "expo-constants": "~9.1.1"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
