--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "react-navigation-stack": "^2.5.0",
     "react-navigation-tabs": "^2.8.13",
     "react-navigation-transitions": "^1.0.12",
-    "expo-constants": "~9.1.1"
+    "expo-constants": "~9.1.1",
+    "expo-application": "~2.2.1"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
