--- a/app.json
+++ b/app.json
@@ -1,6 +1,7 @@
 {
   "name": "Credit Wallet",
   "displayName": " Credit Wallet Mobile App ",
+  "sdkVersion": "38.0.0",
   "expo": {
     "scheme": "creditwallet",
     "name": "Credit Wallet",
