--- a/package.json
+++ b/package.json
@@ -44,7 +44,9 @@
     "react-navigation-stack": "^2.5.0",
     "react-navigation-tabs": "^2.8.13",
     "react-navigation-transitions": "^1.0.12",
-    "expo-linear-gradient": "~8.2.1"
+    "expo-linear-gradient": "~8.2.1",
+    "expo-status-bar": "^1.0.0",
+    "expo-local-authentication": "~9.1.1"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
