update to app and permissions

--- a/app.json
+++ b/app.json
@@ -43,6 +43,9 @@
             "DEFAULT"
           ]
         }
+      ],
+      "permissions": [
+        "MANAGE_DOCUMENTS", "READ_INTERNAL_STORAGE", "USE_FINGERPRINT"
       ]
     },
     "platforms": [
