--- a/package.json
+++ b/package.json
@@ -18,11 +18,15 @@
     "expo-constants": "~9.1.1",
     "expo-document-picker": "~8.2.1",
     "expo-font": "~8.2.1",
+    "expo-linear-gradient": "~8.2.1",
     "expo-linking": "^1.0.3",
+    "expo-local-authentication": "~9.1.1",
     "expo-permissions": "~9.0.1",
     "expo-secure-store": "~9.0.1",
     "expo-splash-screen": "^0.3.1",
+    "expo-status-bar": "^1.0.0",
     "expo-updates": "~0.2.8",
+    "prop-types": "^15.7.2",
     "react": "16.11.0",
     "react-dom": "16.11.0",
     "react-native": "0.62.2",
@@ -43,10 +47,7 @@
     "react-navigation-fluid-transitions": "^0.3.2",
     "react-navigation-stack": "^2.5.0",
     "react-navigation-tabs": "^2.8.13",
-    "react-navigation-transitions": "^1.0.12",
-    "expo-linear-gradient": "~8.2.1",
-    "expo-status-bar": "^1.0.0",
-    "expo-local-authentication": "~9.1.1"
+    "react-navigation-transitions": "^1.0.12"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
