--- a/app.json
+++ b/app.json
@@ -24,6 +24,7 @@
     },
     "android": {
       "package": "com.princepsfinance.creditwallet",
+      "enableDangerousExperimentalLeanBuilds": true,
       "versionCode": 1,
       "intentFilters": [
         {
@@ -58,6 +59,6 @@
     "assetBundlePatterns": [
       "**/*"
     ],
-    "description": ""
+    "description": "Take Loans within 30 minutes and no collateral!"
   }
 }
