--- a/package.json
+++ b/package.json
@@ -25,12 +25,12 @@
     "expo-secure-store": "~9.0.1",
     "expo-splash-screen": "^0.3.1",
     "expo-status-bar": "^1.0.0",
-    "expo-updates": "~0.2.8",
     "prop-types": "^15.7.2",
     "react": "16.11.0",
     "react-dom": "16.11.0",
     "react-native": "0.62.2",
     "react-native-gesture-handler": "~1.6.0",
+    "react-native-iphone-x-helper": "^1.2.1",
     "react-native-paper": "^3.10.1",
     "react-native-picker-select": "^7.0.0",
     "react-native-raw-bottom-sheet": "^2.2.0",
@@ -38,16 +38,13 @@
     "react-native-root-toast": "^3.2.1",
     "react-native-safe-area-context": "~3.0.7",
     "react-native-screens": "~2.9.0",
-    "react-native-snap-carousel": "^3.9.0",
     "react-native-tab-view": "^2.14.0",
     "react-native-unimodules": "~0.10.1",
     "react-native-web": "~0.11.7",
     "react-navigation": "^4.3.9",
     "react-navigation-drawer": "^2.5.0",
-    "react-navigation-fluid-transitions": "^0.3.2",
     "react-navigation-stack": "^2.5.0",
-    "react-navigation-tabs": "^2.8.13",
-    "react-navigation-transitions": "^1.0.12"
+    "react-navigation-tabs": "^2.8.13"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
